src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> epsilon
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> expression SEMICOLON
Rule 7     instruction -> assignment SEMICOLON
Rule 8     instruction -> command SEMICOLON
Rule 9     instruction -> conditional_statement
Rule 10    instruction -> while_statement
Rule 11    instruction -> for_statement
Rule 12    instruction -> instruction_block
Rule 13    epsilon -> <empty>
Rule 14    conditional_statement -> if_statement ELSE body
Rule 15    conditional_statement -> if_statement
Rule 16    if_statement -> IF L_R_BRACKET sentence R_R_BRACKET body
Rule 17    while_statement -> WHILE L_R_BRACKET sentence R_R_BRACKET body
Rule 18    for_statement -> FOR ID ASSIGN range body
Rule 19    body -> instruction
Rule 20    instruction_block -> L_C_BRACKET instructions_opt R_C_BRACKET
Rule 21    range -> expression COLON expression
Rule 22    sentence -> expression EQUAL expression
Rule 23    sentence -> expression NOT_EQUAL expression
Rule 24    sentence -> expression GREATER expression
Rule 25    sentence -> expression LESS expression
Rule 26    sentence -> expression GREATER_EQUAL expression
Rule 27    sentence -> expression LESS_EQUAL expression
Rule 28    expression -> expression PLUS expression
Rule 29    expression -> expression MINUS expression
Rule 30    expression -> expression MAT_PLUS expression
Rule 31    expression -> expression MAT_MINUS expression
Rule 32    expression -> expression TIMES expression
Rule 33    expression -> expression DIVIDE expression
Rule 34    expression -> expression MAT_TIMES expression
Rule 35    expression -> expression MAT_DIVIDE expression
Rule 36    expression -> MINUS expression
Rule 37    expression -> expression TRANSPOSE
Rule 38    expression -> EYE L_R_BRACKET expression R_R_BRACKET
Rule 39    expression -> ZEROS L_R_BRACKET expression R_R_BRACKET
Rule 40    expression -> ONES L_R_BRACKET expression R_R_BRACKET
Rule 41    expression -> L_R_BRACKET expression R_R_BRACKET
Rule 42    expression -> changeable
Rule 43    expression -> matrix
Rule 44    expression -> integer
Rule 45    expression -> float
Rule 46    expression -> string
Rule 47    assignment -> changeable ASSIGN expression
Rule 48    assignment -> changeable PLUS_ASSIGN expression
Rule 49    assignment -> changeable MINUS_ASSIGN expression
Rule 50    assignment -> changeable TIMES_ASSIGN expression
Rule 51    assignment -> changeable DIVIDE_ASSIGN expression
Rule 52    changeable -> id
Rule 53    changeable -> expression L_S_BRACKET integer COMMA integer R_S_BRACKET
Rule 54    integer -> INTEGER
Rule 55    float -> FLOAT
Rule 56    string -> STRING
Rule 57    id -> ID
Rule 58    command -> print_command
Rule 59    command -> RETURN expression
Rule 60    command -> CONTINUE
Rule 61    command -> BREAK
Rule 62    print_command -> PRINT sequence
Rule 63    matrix -> L_S_BRACKET row_sequence R_S_BRACKET
Rule 64    row_sequence -> row COMMA row_sequence
Rule 65    row_sequence -> row
Rule 66    row -> L_S_BRACKET sequence R_S_BRACKET
Rule 67    sequence -> expression COMMA sequence
Rule 68    sequence -> expression

Terminals, with rules where they appear

ASSIGN               : 18 47
BREAK                : 61
COLON                : 21
COMMA                : 53 64 67
CONTINUE             : 60
DIVIDE               : 33
DIVIDE_ASSIGN        : 51
ELSE                 : 14
EQUAL                : 22
EYE                  : 38
FLOAT                : 55
FOR                  : 18
GREATER              : 24
GREATER_EQUAL        : 26
ID                   : 18 57
IF                   : 16
INTEGER              : 54
LESS                 : 25
LESS_EQUAL           : 27
L_C_BRACKET          : 20
L_R_BRACKET          : 16 17 38 39 40 41
L_S_BRACKET          : 53 63 66
MAT_DIVIDE           : 35
MAT_MINUS            : 31
MAT_PLUS             : 30
MAT_TIMES            : 34
MINUS                : 29 36
MINUS_ASSIGN         : 49
NOT_EQUAL            : 23
ONES                 : 40
PLUS                 : 28
PLUS_ASSIGN          : 48
PRINT                : 62
RETURN               : 59
R_C_BRACKET          : 20
R_R_BRACKET          : 16 17 38 39 40 41
R_S_BRACKET          : 53 63 66
SEMICOLON            : 6 7 8
STRING               : 56
TIMES                : 32
TIMES_ASSIGN         : 50
TRANSPOSE            : 37
WHILE                : 17
ZEROS                : 39
error                : 

Nonterminals, with rules where they appear

assignment           : 7
body                 : 14 16 17 18
changeable           : 42 47 48 49 50 51
command              : 8
conditional_statement : 9
epsilon              : 3
expression           : 6 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 37 38 39 40 41 47 48 49 50 51 53 59 67 68
float                : 45
for_statement        : 11
id                   : 52
if_statement         : 14 15
instruction          : 4 5 19
instruction_block    : 12
instructions         : 2 4
instructions_opt     : 1 20
integer              : 44 53 53
matrix               : 43
print_command        : 58
program              : 0
range                : 18
row                  : 64 65
row_sequence         : 63 64
sentence             : 16 17
sequence             : 62 66 67
string               : 46
while_statement      : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> . epsilon
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (13) epsilon -> .
    (6) instruction -> . expression SEMICOLON
    (7) instruction -> . assignment SEMICOLON
    (8) instruction -> . command SEMICOLON
    (9) instruction -> . conditional_statement
    (10) instruction -> . while_statement
    (11) instruction -> . for_statement
    (12) instruction -> . instruction_block
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MAT_PLUS expression
    (31) expression -> . expression MAT_MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MAT_TIMES expression
    (35) expression -> . expression MAT_DIVIDE expression
    (36) expression -> . MINUS expression
    (37) expression -> . expression TRANSPOSE
    (38) expression -> . EYE L_R_BRACKET expression R_R_BRACKET
    (39) expression -> . ZEROS L_R_BRACKET expression R_R_BRACKET
    (40) expression -> . ONES L_R_BRACKET expression R_R_BRACKET
    (41) expression -> . L_R_BRACKET expression R_R_BRACKET
    (42) expression -> . changeable
    (43) expression -> . matrix
    (44) expression -> . integer
    (45) expression -> . float
    (46) expression -> . string
    (47) assignment -> . changeable ASSIGN expression
    (48) assignment -> . changeable PLUS_ASSIGN expression
    (49) assignment -> . changeable MINUS_ASSIGN expression
    (50) assignment -> . changeable TIMES_ASSIGN expression
    (51) assignment -> . changeable DIVIDE_ASSIGN expression
    (58) command -> . print_command
    (59) command -> . RETURN expression
    (60) command -> . CONTINUE
    (61) command -> . BREAK
    (14) conditional_statement -> . if_statement ELSE body
    (15) conditional_statement -> . if_statement
    (17) while_statement -> . WHILE L_R_BRACKET sentence R_R_BRACKET body
    (18) for_statement -> . FOR ID ASSIGN range body
    (20) instruction_block -> . L_C_BRACKET instructions_opt R_C_BRACKET
    (52) changeable -> . id
    (53) changeable -> . expression L_S_BRACKET integer COMMA integer R_S_BRACKET
    (63) matrix -> . L_S_BRACKET row_sequence R_S_BRACKET
    (54) integer -> . INTEGER
    (55) float -> . FLOAT
    (56) string -> . STRING
    (62) print_command -> . PRINT sequence
    (16) if_statement -> . IF L_R_BRACKET sentence R_R_BRACKET body
    (57) id -> . ID

    $end            reduce using rule 13 (epsilon -> .)
    MINUS           shift and go to state 13
    EYE             shift and go to state 14
    ZEROS           shift and go to state 16
    ONES            shift and go to state 17
    L_R_BRACKET     shift and go to state 15
    RETURN          shift and go to state 24
    CONTINUE        shift and go to state 25
    BREAK           shift and go to state 26
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    L_C_BRACKET     shift and go to state 31
    L_S_BRACKET     shift and go to state 33
    INTEGER         shift and go to state 34
    FLOAT           shift and go to state 35
    STRING          shift and go to state 36
    PRINT           shift and go to state 37
    IF              shift and go to state 38
    ID              shift and go to state 30

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    epsilon                        shift and go to state 4
    instruction                    shift and go to state 5
    expression                     shift and go to state 6
    assignment                     shift and go to state 7
    command                        shift and go to state 8
    conditional_statement          shift and go to state 9
    while_statement                shift and go to state 10
    for_statement                  shift and go to state 11
    instruction_block              shift and go to state 12
    changeable                     shift and go to state 18
    matrix                         shift and go to state 19
    integer                        shift and go to state 20
    float                          shift and go to state 21
    string                         shift and go to state 22
    print_command                  shift and go to state 23
    if_statement                   shift and go to state 27
    id                             shift and go to state 32

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . expression SEMICOLON
    (7) instruction -> . assignment SEMICOLON
    (8) instruction -> . command SEMICOLON
    (9) instruction -> . conditional_statement
    (10) instruction -> . while_statement
    (11) instruction -> . for_statement
    (12) instruction -> . instruction_block
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MAT_PLUS expression
    (31) expression -> . expression MAT_MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MAT_TIMES expression
    (35) expression -> . expression MAT_DIVIDE expression
    (36) expression -> . MINUS expression
    (37) expression -> . expression TRANSPOSE
    (38) expression -> . EYE L_R_BRACKET expression R_R_BRACKET
    (39) expression -> . ZEROS L_R_BRACKET expression R_R_BRACKET
    (40) expression -> . ONES L_R_BRACKET expression R_R_BRACKET
    (41) expression -> . L_R_BRACKET expression R_R_BRACKET
    (42) expression -> . changeable
    (43) expression -> . matrix
    (44) expression -> . integer
    (45) expression -> . float
    (46) expression -> . string
    (47) assignment -> . changeable ASSIGN expression
    (48) assignment -> . changeable PLUS_ASSIGN expression
    (49) assignment -> . changeable MINUS_ASSIGN expression
    (50) assignment -> . changeable TIMES_ASSIGN expression
    (51) assignment -> . changeable DIVIDE_ASSIGN expression
    (58) command -> . print_command
    (59) command -> . RETURN expression
    (60) command -> . CONTINUE
    (61) command -> . BREAK
    (14) conditional_statement -> . if_statement ELSE body
    (15) conditional_statement -> . if_statement
    (17) while_statement -> . WHILE L_R_BRACKET sentence R_R_BRACKET body
    (18) for_statement -> . FOR ID ASSIGN range body
    (20) instruction_block -> . L_C_BRACKET instructions_opt R_C_BRACKET
    (52) changeable -> . id
    (53) changeable -> . expression L_S_BRACKET integer COMMA integer R_S_BRACKET
    (63) matrix -> . L_S_BRACKET row_sequence R_S_BRACKET
    (54) integer -> . INTEGER
    (55) float -> . FLOAT
    (56) string -> . STRING
    (62) print_command -> . PRINT sequence
    (16) if_statement -> . IF L_R_BRACKET sentence R_R_BRACKET body
    (57) id -> . ID

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    R_C_BRACKET     reduce using rule 2 (instructions_opt -> instructions .)
    MINUS           shift and go to state 13
    EYE             shift and go to state 14
    ZEROS           shift and go to state 16
    ONES            shift and go to state 17
    L_R_BRACKET     shift and go to state 15
    RETURN          shift and go to state 24
    CONTINUE        shift and go to state 25
    BREAK           shift and go to state 26
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    L_C_BRACKET     shift and go to state 31
    L_S_BRACKET     shift and go to state 33
    INTEGER         shift and go to state 34
    FLOAT           shift and go to state 35
    STRING          shift and go to state 36
    PRINT           shift and go to state 37
    IF              shift and go to state 38
    ID              shift and go to state 30

    instruction                    shift and go to state 39
    expression                     shift and go to state 6
    assignment                     shift and go to state 7
    command                        shift and go to state 8
    conditional_statement          shift and go to state 9
    while_statement                shift and go to state 10
    for_statement                  shift and go to state 11
    instruction_block              shift and go to state 12
    changeable                     shift and go to state 18
    matrix                         shift and go to state 19
    integer                        shift and go to state 20
    float                          shift and go to state 21
    string                         shift and go to state 22
    print_command                  shift and go to state 23
    if_statement                   shift and go to state 27
    id                             shift and go to state 32

state 4

    (3) instructions_opt -> epsilon .

    $end            reduce using rule 3 (instructions_opt -> epsilon .)
    R_C_BRACKET     reduce using rule 3 (instructions_opt -> epsilon .)


state 5

    (5) instructions -> instruction .

    MINUS           reduce using rule 5 (instructions -> instruction .)
    EYE             reduce using rule 5 (instructions -> instruction .)
    ZEROS           reduce using rule 5 (instructions -> instruction .)
    ONES            reduce using rule 5 (instructions -> instruction .)
    L_R_BRACKET     reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    L_C_BRACKET     reduce using rule 5 (instructions -> instruction .)
    L_S_BRACKET     reduce using rule 5 (instructions -> instruction .)
    INTEGER         reduce using rule 5 (instructions -> instruction .)
    FLOAT           reduce using rule 5 (instructions -> instruction .)
    STRING          reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    R_C_BRACKET     reduce using rule 5 (instructions -> instruction .)


state 6

    (6) instruction -> expression . SEMICOLON
    (28) expression -> expression . PLUS expression
    (29) expression -> expression . MINUS expression
    (30) expression -> expression . MAT_PLUS expression
    (31) expression -> expression . MAT_MINUS expression
    (32) expression -> expression . TIMES expression
    (33) expression -> expression . DIVIDE expression
    (34) expression -> expression . MAT_TIMES expression
    (35) expression -> expression . MAT_DIVIDE expression
    (37) expression -> expression . TRANSPOSE
    (53) changeable -> expression . L_S_BRACKET integer COMMA integer R_S_BRACKET

    SEMICOLON       shift and go to state 40
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    MAT_PLUS        shift and go to state 43
    MAT_MINUS       shift and go to state 44
    TIMES           shift and go to state 45
    DIVIDE          shift and go to state 46
    MAT_TIMES       shift and go to state 47
    MAT_DIVIDE      shift and go to state 48
    TRANSPOSE       shift and go to state 49
    L_S_BRACKET     shift and go to state 50


state 7

    (7) instruction -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 51


state 8

    (8) instruction -> command . SEMICOLON

    SEMICOLON       shift and go to state 52


state 9

    (9) instruction -> conditional_statement .

    MINUS           reduce using rule 9 (instruction -> conditional_statement .)
    EYE             reduce using rule 9 (instruction -> conditional_statement .)
    ZEROS           reduce using rule 9 (instruction -> conditional_statement .)
    ONES            reduce using rule 9 (instruction -> conditional_statement .)
    L_R_BRACKET     reduce using rule 9 (instruction -> conditional_statement .)
    RETURN          reduce using rule 9 (instruction -> conditional_statement .)
    CONTINUE        reduce using rule 9 (instruction -> conditional_statement .)
    BREAK           reduce using rule 9 (instruction -> conditional_statement .)
    WHILE           reduce using rule 9 (instruction -> conditional_statement .)
    FOR             reduce using rule 9 (instruction -> conditional_statement .)
    L_C_BRACKET     reduce using rule 9 (instruction -> conditional_statement .)
    L_S_BRACKET     reduce using rule 9 (instruction -> conditional_statement .)
    INTEGER         reduce using rule 9 (instruction -> conditional_statement .)
    FLOAT           reduce using rule 9 (instruction -> conditional_statement .)
    STRING          reduce using rule 9 (instruction -> conditional_statement .)
    PRINT           reduce using rule 9 (instruction -> conditional_statement .)
    IF              reduce using rule 9 (instruction -> conditional_statement .)
    ID              reduce using rule 9 (instruction -> conditional_statement .)
    $end            reduce using rule 9 (instruction -> conditional_statement .)
    R_C_BRACKET     reduce using rule 9 (instruction -> conditional_statement .)
    ELSE            reduce using rule 9 (instruction -> conditional_statement .)


state 10

    (10) instruction -> while_statement .

    MINUS           reduce using rule 10 (instruction -> while_statement .)
    EYE             reduce using rule 10 (instruction -> while_statement .)
    ZEROS           reduce using rule 10 (instruction -> while_statement .)
    ONES            reduce using rule 10 (instruction -> while_statement .)
    L_R_BRACKET     reduce using rule 10 (instruction -> while_statement .)
    RETURN          reduce using rule 10 (instruction -> while_statement .)
    CONTINUE        reduce using rule 10 (instruction -> while_statement .)
    BREAK           reduce using rule 10 (instruction -> while_statement .)
    WHILE           reduce using rule 10 (instruction -> while_statement .)
    FOR             reduce using rule 10 (instruction -> while_statement .)
    L_C_BRACKET     reduce using rule 10 (instruction -> while_statement .)
    L_S_BRACKET     reduce using rule 10 (instruction -> while_statement .)
    INTEGER         reduce using rule 10 (instruction -> while_statement .)
    FLOAT           reduce using rule 10 (instruction -> while_statement .)
    STRING          reduce using rule 10 (instruction -> while_statement .)
    PRINT           reduce using rule 10 (instruction -> while_statement .)
    IF              reduce using rule 10 (instruction -> while_statement .)
    ID              reduce using rule 10 (instruction -> while_statement .)
    $end            reduce using rule 10 (instruction -> while_statement .)
    R_C_BRACKET     reduce using rule 10 (instruction -> while_statement .)
    ELSE            reduce using rule 10 (instruction -> while_statement .)


state 11

    (11) instruction -> for_statement .

    MINUS           reduce using rule 11 (instruction -> for_statement .)
    EYE             reduce using rule 11 (instruction -> for_statement .)
    ZEROS           reduce using rule 11 (instruction -> for_statement .)
    ONES            reduce using rule 11 (instruction -> for_statement .)
    L_R_BRACKET     reduce using rule 11 (instruction -> for_statement .)
    RETURN          reduce using rule 11 (instruction -> for_statement .)
    CONTINUE        reduce using rule 11 (instruction -> for_statement .)
    BREAK           reduce using rule 11 (instruction -> for_statement .)
    WHILE           reduce using rule 11 (instruction -> for_statement .)
    FOR             reduce using rule 11 (instruction -> for_statement .)
    L_C_BRACKET     reduce using rule 11 (instruction -> for_statement .)
    L_S_BRACKET     reduce using rule 11 (instruction -> for_statement .)
    INTEGER         reduce using rule 11 (instruction -> for_statement .)
    FLOAT           reduce using rule 11 (instruction -> for_statement .)
    STRING          reduce using rule 11 (instruction -> for_statement .)
    PRINT           reduce using rule 11 (instruction -> for_statement .)
    IF              reduce using rule 11 (instruction -> for_statement .)
    ID              reduce using rule 11 (instruction -> for_statement .)
    $end            reduce using rule 11 (instruction -> for_statement .)
    R_C_BRACKET     reduce using rule 11 (instruction -> for_statement .)
    ELSE            reduce using rule 11 (instruction -> for_statement .)


state 12

    (12) instruction -> instruction_block .

    MINUS           reduce using rule 12 (instruction -> instruction_block .)
    EYE             reduce using rule 12 (instruction -> instruction_block .)
    ZEROS           reduce using rule 12 (instruction -> instruction_block .)
    ONES            reduce using rule 12 (instruction -> instruction_block .)
    L_R_BRACKET     reduce using rule 12 (instruction -> instruction_block .)
    RETURN          reduce using rule 12 (instruction -> instruction_block .)
    CONTINUE        reduce using rule 12 (instruction -> instruction_block .)
    BREAK           reduce using rule 12 (instruction -> instruction_block .)
    WHILE           reduce using rule 12 (instruction -> instruction_block .)
    FOR             reduce using rule 12 (instruction -> instruction_block .)
    L_C_BRACKET     reduce using rule 12 (instruction -> instruction_block .)
    L_S_BRACKET     reduce using rule 12 (instruction -> instruction_block .)
    INTEGER         reduce using rule 12 (instruction -> instruction_block .)
    FLOAT           reduce using rule 12 (instruction -> instruction_block .)
    STRING          reduce using rule 12 (instruction -> instruction_block .)
    PRINT           reduce using rule 12 (instruction -> instruction_block .)
    IF              reduce using rule 12 (instruction -> instruction_block .)
    ID              reduce using rule 12 (instruction -> instruction_block .)
    $end            reduce using rule 12 (instruction -> instruction_block .)
    R_C_BRACKET     reduce using rule 12 (instruction -> instruction_block .)
    ELSE            reduce using rule 12 (instruction -> instruction_block .)


state 13

    (36) expression -> MINUS . expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MAT_PLUS expression
    (31) expression -> . expression MAT_MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MAT_TIMES expression
    (35) expression -> . expression MAT_DIVIDE expression
    (36) expression -> . MINUS expression
    (37) expression -> . expression TRANSPOSE
    (38) expression -> . EYE L_R_BRACKET expression R_R_BRACKET
    (39) expression -> . ZEROS L_R_BRACKET expression R_R_BRACKET
    (40) expression -> . ONES L_R_BRACKET expression R_R_BRACKET
    (41) expression -> . L_R_BRACKET expression R_R_BRACKET
    (42) expression -> . changeable
    (43) expression -> . matrix
    (44) expression -> . integer
    (45) expression -> . float
    (46) expression -> . string
    (52) changeable -> . id
    (53) changeable -> . expression L_S_BRACKET integer COMMA integer R_S_BRACKET
    (63) matrix -> . L_S_BRACKET row_sequence R_S_BRACKET
    (54) integer -> . INTEGER
    (55) float -> . FLOAT
    (56) string -> . STRING
    (57) id -> . ID

    MINUS           shift and go to state 13
    EYE             shift and go to state 14
    ZEROS           shift and go to state 16
    ONES            shift and go to state 17
    L_R_BRACKET     shift and go to state 15
    L_S_BRACKET     shift and go to state 33
    INTEGER         shift and go to state 34
    FLOAT           shift and go to state 35
    STRING          shift and go to state 36
    ID              shift and go to state 30

    expression                     shift and go to state 53
    changeable                     shift and go to state 54
    matrix                         shift and go to state 19
    integer                        shift and go to state 20
    float                          shift and go to state 21
    string                         shift and go to state 22
    id                             shift and go to state 32

state 14

    (38) expression -> EYE . L_R_BRACKET expression R_R_BRACKET

    L_R_BRACKET     shift and go to state 55


state 15

    (41) expression -> L_R_BRACKET . expression R_R_BRACKET
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MAT_PLUS expression
    (31) expression -> . expression MAT_MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MAT_TIMES expression
    (35) expression -> . expression MAT_DIVIDE expression
    (36) expression -> . MINUS expression
    (37) expression -> . expression TRANSPOSE
    (38) expression -> . EYE L_R_BRACKET expression R_R_BRACKET
    (39) expression -> . ZEROS L_R_BRACKET expression R_R_BRACKET
    (40) expression -> . ONES L_R_BRACKET expression R_R_BRACKET
    (41) expression -> . L_R_BRACKET expression R_R_BRACKET
    (42) expression -> . changeable
    (43) expression -> . matrix
    (44) expression -> . integer
    (45) expression -> . float
    (46) expression -> . string
    (52) changeable -> . id
    (53) changeable -> . expression L_S_BRACKET integer COMMA integer R_S_BRACKET
    (63) matrix -> . L_S_BRACKET row_sequence R_S_BRACKET
    (54) integer -> . INTEGER
    (55) float -> . FLOAT
    (56) string -> . STRING
    (57) id -> . ID

    MINUS           shift and go to state 13
    EYE             shift and go to state 14
    ZEROS           shift and go to state 16
    ONES            shift and go to state 17
    L_R_BRACKET     shift and go to state 15
    L_S_BRACKET     shift and go to state 33
    INTEGER         shift and go to state 34
    FLOAT           shift and go to state 35
    STRING          shift and go to state 36
    ID              shift and go to state 30

    expression                     shift and go to state 56
    changeable                     shift and go to state 54
    matrix                         shift and go to state 19
    integer                        shift and go to state 20
    float                          shift and go to state 21
    string                         shift and go to state 22
    id                             shift and go to state 32

state 16

    (39) expression -> ZEROS . L_R_BRACKET expression R_R_BRACKET

    L_R_BRACKET     shift and go to state 57


state 17

    (40) expression -> ONES . L_R_BRACKET expression R_R_BRACKET

    L_R_BRACKET     shift and go to state 58


state 18

    (42) expression -> changeable .
    (47) assignment -> changeable . ASSIGN expression
    (48) assignment -> changeable . PLUS_ASSIGN expression
    (49) assignment -> changeable . MINUS_ASSIGN expression
    (50) assignment -> changeable . TIMES_ASSIGN expression
    (51) assignment -> changeable . DIVIDE_ASSIGN expression

    SEMICOLON       reduce using rule 42 (expression -> changeable .)
    PLUS            reduce using rule 42 (expression -> changeable .)
    MINUS           reduce using rule 42 (expression -> changeable .)
    MAT_PLUS        reduce using rule 42 (expression -> changeable .)
    MAT_MINUS       reduce using rule 42 (expression -> changeable .)
    TIMES           reduce using rule 42 (expression -> changeable .)
    DIVIDE          reduce using rule 42 (expression -> changeable .)
    MAT_TIMES       reduce using rule 42 (expression -> changeable .)
    MAT_DIVIDE      reduce using rule 42 (expression -> changeable .)
    TRANSPOSE       reduce using rule 42 (expression -> changeable .)
    L_S_BRACKET     reduce using rule 42 (expression -> changeable .)
    ASSIGN          shift and go to state 59
    PLUS_ASSIGN     shift and go to state 60
    MINUS_ASSIGN    shift and go to state 61
    TIMES_ASSIGN    shift and go to state 62
    DIVIDE_ASSIGN   shift and go to state 63


state 19

    (43) expression -> matrix .

    SEMICOLON       reduce using rule 43 (expression -> matrix .)
    PLUS            reduce using rule 43 (expression -> matrix .)
    MINUS           reduce using rule 43 (expression -> matrix .)
    MAT_PLUS        reduce using rule 43 (expression -> matrix .)
    MAT_MINUS       reduce using rule 43 (expression -> matrix .)
    TIMES           reduce using rule 43 (expression -> matrix .)
    DIVIDE          reduce using rule 43 (expression -> matrix .)
    MAT_TIMES       reduce using rule 43 (expression -> matrix .)
    MAT_DIVIDE      reduce using rule 43 (expression -> matrix .)
    TRANSPOSE       reduce using rule 43 (expression -> matrix .)
    L_S_BRACKET     reduce using rule 43 (expression -> matrix .)
    R_R_BRACKET     reduce using rule 43 (expression -> matrix .)
    COMMA           reduce using rule 43 (expression -> matrix .)
    EQUAL           reduce using rule 43 (expression -> matrix .)
    NOT_EQUAL       reduce using rule 43 (expression -> matrix .)
    GREATER         reduce using rule 43 (expression -> matrix .)
    LESS            reduce using rule 43 (expression -> matrix .)
    GREATER_EQUAL   reduce using rule 43 (expression -> matrix .)
    LESS_EQUAL      reduce using rule 43 (expression -> matrix .)
    R_S_BRACKET     reduce using rule 43 (expression -> matrix .)
    COLON           reduce using rule 43 (expression -> matrix .)
    EYE             reduce using rule 43 (expression -> matrix .)
    ZEROS           reduce using rule 43 (expression -> matrix .)
    ONES            reduce using rule 43 (expression -> matrix .)
    L_R_BRACKET     reduce using rule 43 (expression -> matrix .)
    RETURN          reduce using rule 43 (expression -> matrix .)
    CONTINUE        reduce using rule 43 (expression -> matrix .)
    BREAK           reduce using rule 43 (expression -> matrix .)
    WHILE           reduce using rule 43 (expression -> matrix .)
    FOR             reduce using rule 43 (expression -> matrix .)
    L_C_BRACKET     reduce using rule 43 (expression -> matrix .)
    INTEGER         reduce using rule 43 (expression -> matrix .)
    FLOAT           reduce using rule 43 (expression -> matrix .)
    STRING          reduce using rule 43 (expression -> matrix .)
    PRINT           reduce using rule 43 (expression -> matrix .)
    IF              reduce using rule 43 (expression -> matrix .)
    ID              reduce using rule 43 (expression -> matrix .)


state 20

    (44) expression -> integer .

    SEMICOLON       reduce using rule 44 (expression -> integer .)
    PLUS            reduce using rule 44 (expression -> integer .)
    MINUS           reduce using rule 44 (expression -> integer .)
    MAT_PLUS        reduce using rule 44 (expression -> integer .)
    MAT_MINUS       reduce using rule 44 (expression -> integer .)
    TIMES           reduce using rule 44 (expression -> integer .)
    DIVIDE          reduce using rule 44 (expression -> integer .)
    MAT_TIMES       reduce using rule 44 (expression -> integer .)
    MAT_DIVIDE      reduce using rule 44 (expression -> integer .)
    TRANSPOSE       reduce using rule 44 (expression -> integer .)
    L_S_BRACKET     reduce using rule 44 (expression -> integer .)
    R_R_BRACKET     reduce using rule 44 (expression -> integer .)
    COMMA           reduce using rule 44 (expression -> integer .)
    EQUAL           reduce using rule 44 (expression -> integer .)
    NOT_EQUAL       reduce using rule 44 (expression -> integer .)
    GREATER         reduce using rule 44 (expression -> integer .)
    LESS            reduce using rule 44 (expression -> integer .)
    GREATER_EQUAL   reduce using rule 44 (expression -> integer .)
    LESS_EQUAL      reduce using rule 44 (expression -> integer .)
    R_S_BRACKET     reduce using rule 44 (expression -> integer .)
    COLON           reduce using rule 44 (expression -> integer .)
    EYE             reduce using rule 44 (expression -> integer .)
    ZEROS           reduce using rule 44 (expression -> integer .)
    ONES            reduce using rule 44 (expression -> integer .)
    L_R_BRACKET     reduce using rule 44 (expression -> integer .)
    RETURN          reduce using rule 44 (expression -> integer .)
    CONTINUE        reduce using rule 44 (expression -> integer .)
    BREAK           reduce using rule 44 (expression -> integer .)
    WHILE           reduce using rule 44 (expression -> integer .)
    FOR             reduce using rule 44 (expression -> integer .)
    L_C_BRACKET     reduce using rule 44 (expression -> integer .)
    INTEGER         reduce using rule 44 (expression -> integer .)
    FLOAT           reduce using rule 44 (expression -> integer .)
    STRING          reduce using rule 44 (expression -> integer .)
    PRINT           reduce using rule 44 (expression -> integer .)
    IF              reduce using rule 44 (expression -> integer .)
    ID              reduce using rule 44 (expression -> integer .)


state 21

    (45) expression -> float .
